[project]
name = "vudu-library-list"
version = "0.1.0"
description = "This project retrieves a list of purchased movies and TV shows from the Vudu website."
authors = [
    { name = "Bryan Keary" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "selenium>=4.23.1,<5",
    "webdriver-manager>=4.0.2,<5",
]

[tool.uv]
package = false
